# portfolio

./: .gitignore  README.md  main.py  pyproject.toml
content/: about.md  education.md  experience.md  learning.md  projects.md  skills.md
pages/: About.py  Education.py  Experience.py  Projects.py  Skills.py  learning.py
