[project]
name = "portfolio"
version = "0.1.0"
description = "For those who wants to know about Himanshu"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.5",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",
    "streamlit>=1.54.0",
]
